unpackaged/unpackaged/unpackaged/objects/ODX_Bond__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ODX Bonds</relationshipLabel>
        <relationshipName>ODX_Bonds</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Issued__c</fullName>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <label>ODX Bond</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bond</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ODX Bonds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>